--- a/Calculator.html
+++ b/Calculator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="icon" type="image/x-icon" href="style/pic/icon.png" />
+    <link rel="icon" type="image/x-icon" href="style/image/icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -76,6 +76,6 @@
 
       <p class="error-message" id="error-message" aria-live="polite"></p>
     </div>
-    <script type="module" src="script/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
